src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>SL_Step_Type__c</fullName>
        <description>The type of step within a Salesloft cadence (i.e. email, phone, other)</description>
        <label>Step Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Viewed_Count__c</fullName>
        <description>How man opens/views a Salesloft email has received</description>
        <label>Viewed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>CASE(Team_Assigned_Static__c,
&quot;SEC&quot;,&quot;Central&quot;,
&quot;Beast Coast&quot;,&quot;Central&quot;,
&quot;Closers Club&quot;,&quot;East&quot;,
&quot;The Green Monsters&quot;,&quot;East&quot;,
&quot;Virtual Empire&quot;,&quot;East&quot;,
&quot;The Ringers&quot;,&quot;East&quot;,
&quot;Peak Performers&quot;,&quot;West&quot;,
&quot;The Green Flash&quot;,&quot;West&quot;,
&quot;The Pack&quot;,&quot;West&quot;,
&quot;Spartans&quot;,&quot;East&quot;,
&quot;The Foundation&quot;,&quot;Central&quot;,
&quot;The Wolves of Boylston&quot;,&quot;East&quot;,
&quot;Green Street Hooligans&quot;,&quot;Central&quot;,
&quot;Bangers n Cash&quot;,&quot;EMEA&quot;,
&quot;Enterprise&quot;,&quot;US Enterprise&quot;,
&quot;Global Accounts International&quot;,&quot;Global Accounts - EMEA&quot;,
&quot;Global Accounts US&quot;,&quot;Global Accounts - US&quot;,
&quot;Aussie Posse&quot;,&quot;APAC&quot;,
&quot;Marketing Inbound&quot;,&quot;Marketing Inbound&quot;,
&quot;The Minutemen&quot;,&quot;EMEA&quot;,
&quot;Xccelerators&quot;,&quot;Channel&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Vendor__c</fullName>
        <label>Storage Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>DataGravity</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Dell MD Series (NetApp OEM)</fullName>
                </value>
                <value>
                    <fullName>EMC (Other)</fullName>
                </value>
                <value>
                    <fullName>EMC (VMAX)</fullName>
                </value>
                <value>
                    <fullName>EMC (VNX)</fullName>
                </value>
                <value>
                    <fullName>EMC (VNX-F)</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HP (3PAR)</fullName>
                </value>
                <value>
                    <fullName>HP (Other)</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>IBM N Series (NetApp OEM)</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Nimble Storage</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pure Storage</fullName>
                </value>
                <value>
                    <fullName>SolidFire</fullName>
                </value>
                <value>
                    <fullName>Tegile</fullName>
                </value>
                <value>
                    <fullName>Tintri</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Violin Memory</fullName>
                </value>
                <value>
                    <fullName>XtremIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Assigned_Static__c</fullName>
        <label>Team (Assigned - Static)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Created_By_Static__c</fullName>
        <label>Team (Created By - Static)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure_Created_By_Days__c</fullName>
        <formula>TODAY()-CreatedBy.Start_Date__c</formula>
        <label>Tenure (Created By - Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Pain__c</fullName>
        <label>Time (Pain)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_workflow_rules__c</fullName>
        <label>Trigger workflow rules</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turbonomic_Demo_Version__c</fullName>
        <inlineHelpText>Which version of Turbonomic will you be presenting in your Demo?</inlineHelpText>
        <label>Turbonomic Demo Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Turbonomic_Product_Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtual_Machines_VMs__c</fullName>
        <label>Virtual Machines (VMs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Account_Stamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be stamped at time of activity creation. Stamps whether account was warm at time of activity creation.</description>
        <label>Warm Account (Stamp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <label>BizibleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
        <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</description>
        <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</inlineHelpText>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Inactive_Unresolved_Emails</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,To Be Rescheduled,In Progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>contains</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Unresolved Email</value>
        </filters>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Inactive Unresolved Emails</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,To Be Rescheduled,In Progress</value>
        </filters>
        <label>My Open Tasks</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Overdue_Inactive_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,To Be Rescheduled,In Progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>contains</operation>
            <value>Inactive</value>
        </filters>
        <label>Overdue Inactive Tasks</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Lyle</value>
        </filters>
        <label>Overdue Tasks</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>activities__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>